--- a/config/rbac/interrupter_viewer_role.yaml
+++ b/config/rbac/interrupter_viewer_role.yaml
@@ -1,31 +1,27 @@
-# permissions for end users to edit swtiches.
+# permissions for end users to view interrupters.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: swtich-editor-role
+    app.kubernetes.io/instance: interrupter-viewer-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: switch-prometheus-operator
     app.kubernetes.io/part-of: switch-prometheus-operator
     app.kubernetes.io/managed-by: kustomize
-  name: swtich-editor-role
+  name: interrupter-viewer-role
 rules:
 - apiGroups:
   - switch.alexbescond.io
   resources:
-  - swtiches
+  - interrupters
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - switch.alexbescond.io
   resources:
-  - swtiches/status
+  - interrupters/status
   verbs:
   - get
