--- a/config/rbac/interrupter_editor_role.yaml
+++ b/config/rbac/interrupter_editor_role.yaml
@@ -1,27 +1,31 @@
-# permissions for end users to view swtiches.
+# permissions for end users to edit interrupters.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: swtich-viewer-role
+    app.kubernetes.io/instance: interrupter-editor-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: switch-prometheus-operator
     app.kubernetes.io/part-of: switch-prometheus-operator
     app.kubernetes.io/managed-by: kustomize
-  name: swtich-viewer-role
+  name: interrupter-editor-role
 rules:
 - apiGroups:
   - switch.alexbescond.io
   resources:
-  - swtiches
+  - interrupters
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - switch.alexbescond.io
   resources:
-  - swtiches/status
+  - interrupters/status
   verbs:
   - get
